python/testData/quickFixes/PyTypeHintsQuickFixTest/referenceToListAsTypingMemberParameter.py
from typing import List

l1 = [int]
foo7: List[<error descr="Parameters to generic types must be types">l<caret>1</error>]